Cleaned up the messaging, download totals, and export button on the GuestBookResponseDataPage. Fixed a layout issue with the page title tab on the TermsOfUsePage. [ref 2326, 2373, 2386]

--- a/dvn-app/trunk/src/DVN-web/web/resources/css/dvnspecific.css
+++ b/dvn-app/trunk/src/DVN-web/web/resources/css/dvnspecific.css
@@ -243,6 +243,9 @@ span.dvnAddClassificationDvNotReleased{background:url(/dvn/resources/images/icon
 .dvnEditGuestbookCustomQuestions.iceDatTbl tr tr, .dvnGuestbookCustomQuestions.iceDatTbl tr tr {border:0;}
 .dvnGuestbookCustomQuestionInnerBlock {margin-left:6.25em;}
 .dvnGuestBookResponseTableBlock{position:relative;width:100%;overflow:auto}
+.dvnGuestBookResponseDownloadCountBlock {margin-bottom:1em;}
+.dvnGuestBookResponseDwnldTtlLbl {font-weight:bold;}
+.dvnGuestBookResponseDownloadCountBlock span.iceOutTxt{margin-right:1em;}
 .dvnGuestBookResponseTable{position:absolute;top:0;left:0;margin-top:0}
 .dvnGuestBookResponseTable th span.dvnGuestbookStudyTitleHeader, .dvnGuestBookResponseTable th span.dvnGuestbookTimeHeader, .dvnGuestBookResponseTable th span.dvnGuestbookCustomResponseHeader{min-width:200px;display:block;}
 /* PERMISSIONS */
